tests/invalid/runtime/module_nosym.pts
import test.nosym.{missing};

function main() : void {
    missing();
}
